--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-matplotlib
-pandas
-networkx
+matplotlib==3.8.4
+mlxtend==0.23.1
+mysql-connector-python==8.4.0
+networkx==3.3
+pandas==2.2.2
+python-dotenv==1.0.1
+scikit-learn==1.5.0
+scipy==1.13.0
+numpy==1.26.4
